# usiem-elasticsearch

./: Cargo.toml  README.md
docker/: docker-compose.yml
src/: lib.rs
src/input/: mod.rs
src/output/: mod.rs
tests/: integration.rs
