[package]
name = "u-siem-elasticsearch"
version = "0.0.10"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "uSIEM Elasticsearch Input/Output logging"
repository = "https://github.com/u-siem/usiem-elasticsearch"
keywords = ["SIEM", "security", "logs","syslog","dns"]
categories = ["parsing"]
edition = "2018"

[lib]
name = "usiem_elasticsearch"
path = "src/lib.rs"

[dependencies]
u-siem = {version = "0.0"}
reqwest = {version = "0.11", features = ["blocking"]}
tide = "0.16"
async-std = { version = "1.11" }
fastrand = "1.7"